[황다영]게시글 카테고리API목록 받아오기

--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -29,7 +29,7 @@
           </div>
            
               <!-- 카테고리 받아오기 -->
-            <span class="category"><i class="fa-solid fa-icons"></i> <%= post.category.title %></span>
+            <span class="category"><%= post.category.title %></span>
             <!-- 더 보기 버튼 -->
             <div class="viewMore" onclick="toggleEditDelete()">
               <i class="fa-solid fa-ellipsis-vertical"></i>
