개인 프로필 게시글 없을 경우 스크립트 추가(테스트X)

--- a/public/styles/pages/users/userDetail.css
+++ b/public/styles/pages/users/userDetail.css
@@ -73,7 +73,7 @@ main {
 /* 유저 프로필 소개 부분 */
 
 /* 내 게시글 / 좋아요한 게시글 버튼 부분 */
-.post-area {
+.postContainer {
   display: flex;
   justify-content: center;
   flex-direction: column;
