--- a/src/views/client/posts/postWrite.ejs
+++ b/src/views/client/posts/postWrite.ejs
@@ -25,9 +25,9 @@
             <!-- <span>카테고리 선택</span> -->
             <select name="category" id="category" class="category" required>
               <option disabled selected>카테고리 선택</option>
-              <% if (post.category.id && post.category.title) { %>
-                <option value="<%= post.category.id %>"><%= post.category.title %></option>
-              <% } %>
+            
+                <!-- <option value="<%= post.category.id %>"><%= post.category.title %></option> -->
+             
               <!-- <option value="66f24da1aa8f0092f375865a">&#127916; 영화 나눔숲</option>
               <option value="66f28a54453960e94559ae80">&#128170; 운동 나눔숲</option>
               <option value="66f247f68d1dffeca42e1a10">&#128187; 개발 나눔숲</option>
