카테고리 목록 게시글 연결

--- a/src/views/admin/category/categoryEdit.ejs
+++ b/src/views/admin/category/categoryEdit.ejs
@@ -18,7 +18,7 @@
     <body>
         <section class="category-write-edit-wrapper">
             <div class="category-setup-menu-bar">
-                <a href="">
+                <a href="/users/:userId/edit">
                     <i class="fa-solid fa-gear"></i>
                 </a>
                 <div class="category-profile">
