--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -21,7 +21,7 @@
                 <a href="javascript:void(0)" onclick="closeMenu()"
                     ><i class="fa-solid fa-x"></i
                 ></a>
-                <a href="">
+                <a href="/users/:userId/edit">
                     <i class="fa-solid fa-gear"></i>
                 </a>
                 <div class="category-profile">
