--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="category-write-edit-wrapper">
                 <section class="category-setup-menu-bar">
-                    <a href="#">
+                    <a href="/users/:userId/edit">
                         <i class="fa-solid fa-gear"></i>
                     </a>
                     <div class="category-profile">
