--- a/src/views/client/category/userCategoryDetail.ejs
+++ b/src/views/client/category/userCategoryDetail.ejs
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <%- include('/client/posts/posstLit.ejs') %>
+        <%- include('../posts/postList.ejs',{posts}) %>
     </body>
 </html>
