--- a/src/views/admin/category/categoryDetail.ejs
+++ b/src/views/admin/category/categoryDetail.ejs
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <%- include('../posts/postList.ejs') %>
+        <%- include('../posts/postList.ejs',{posts}) %>
     </body>
 </html>
