--- a/public/styles/pages/posts/postList.css
+++ b/public/styles/pages/posts/postList.css
@@ -1,3 +1,13 @@
 @charset "utf-8";
 @import "../../common.css";
 @import "../../../styles/pages/posts/postDetail.css";
+
+
+.inner {
+  padding-bottom: 15px;
+}
+
+section {
+  margin: 15px 0;
+  box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+}
