--- a/public/styles/pages/posts/postList.css
+++ b/public/styles/pages/posts/postList.css
@@ -11,3 +11,12 @@ section {
   margin: 15px 0;
   box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
 }
+
+
+
+/* 태블릿 */
+@media (min-width: 768px) { 
+  .commentArea p {
+    width: 100%;
+  }
+} 
