--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -165,6 +165,50 @@
     </div>
   </div>
 
- 
+  <!-- 작성시간 한글 변환 -->
+  <script>
+    const $createdAt = document.querySelectorAll(".createdAt");
+    
+
+    const options = {
+      year: "numeric",
+      month: "long",
+      day: "numeric",
+      hour: "2-digit",
+      minute: "2-digit",
+      timeZone: "Asia/Seoul"
+    }
+
+    $createdAt.forEach(e => {
+      const createdAt = new Date(e.dataset.createdAt);
+      const formattedDate = createdAt.toLocaleString('ko-KR', options);
+      e.textContent = formattedDate;
+    })
+    
+
+    // 좋아요 아이콘
+    const $like = document.querySelectorAll(".like");
+    $like.forEach(like => {
+      like.addEventListener('click', function() {
+        const heartIcon = this.querySelector("i");
+
+        heartIcon.classList.toggle('fa-regular');
+        heartIcon.classList.toggle('fa-solid');
+      })
+    });
+
+    // 수정, 삭제 더 보기 버튼 보이기
+    function toggleEditDelete() {
+            const editDeleteArea = document.querySelector('.postEditDelete');
+            if (editDeleteArea.style.display === 'none' || editDeleteArea.style.display === '') {
+                editDeleteArea.style.display = 'flex'; 
+            } else {
+                editDeleteArea.style.display = 'none'; 
+            }
+        };
+
+
+
+  </script>
 </body>
 </html>
