--- a/public/styles/pages/posts/postList.css
+++ b/public/styles/pages/posts/postList.css
@@ -12,6 +12,14 @@ section {
   box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
 }
 
+.title {
+  transition: .3s;
+}
+
+.title:hover {
+  color: var(--primary);
+}
+
 
 
 /* 태블릿 */
