--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -24,8 +24,8 @@
               <img src="/static/images/profile.webp" alt="프로필 이미지" class="profileImg">
               <div class="userInfo">
                 <!-- 유저 닉네임 받아오기 -->
-                 <!-- <%= post.author.profile.nickname %> -->
-                <a href="" class="nickName">다영다영</a>
+                <!-- <%= post.author.profile.nickname %> 회원가입 시 프로필 닉네임 같이 넣어줘도 못불러옴 --> 
+                <a href="http://localhost:4000/users/<%= post.author.id %>" class="nickName">다영다영</a>
                 <!-- 팔로우 버튼 -->
                 <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
                 <!-- 유저 아이디 -->
@@ -57,7 +57,7 @@
     
     
           <!-- 글 제목 -->
-          <b class="title"><%= post.title %></b>
+          <a href="/posts/<%= post.postId %>" class="title"><%= post.title %></a>
           <!-- 글 내용 -->
           <p class="content"><%- post.content %></p>
         
@@ -198,16 +198,10 @@
     });
 
     // 수정, 삭제 더 보기 버튼 보이기
-    function toggleEditDelete() {
-            const editDeleteArea = document.querySelector('.postEditDelete');
-            if (editDeleteArea.style.display === 'none' || editDeleteArea.style.display === '') {
-                editDeleteArea.style.display = 'flex'; 
-            } else {
-                editDeleteArea.style.display = 'none'; 
-            }
-        };
-
-
+    // function toggleEditDelete(postId, e) {
+    //   // 수정, 삭제 버튼 숨기기 (전체)
+    //   const allEditDeleteBtns = 
+    // }
 
   </script>
 </body>
