--- a/public/styles/pages/users/userDetail.css
+++ b/public/styles/pages/users/userDetail.css
@@ -39,7 +39,7 @@ main {
   margin-top: -100px;
   gap: 20px;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
   /* border: 1px solid blue; */
   position: relative;
 }
