게시글 목록에 카테고리 목록 연결중

--- a/src/views/_layouts/header-menu-w.ejs
+++ b/src/views/_layouts/header-menu-w.ejs
@@ -1,14 +1,15 @@
 <header id="header">
-  <!-- 뒤로가기 -->
-   <button type="button" class="menuButtonWhite">
+    <!-- 뒤로가기 -->
+    <button
+        type="button"
+        class="menuButtonWhite"
+        onclick="location.href='/category'"
+    ></button>
 
-   </button>
-     <!-- 로고 -->
+    <!-- 로고 -->
     <a href="#">
-      <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
+        <img src="/static/images/nanum-logo-w.png" alt="나눔숲" />
     </a>
-    <button type="button" class="searchButtonWhite">
-
-    </button>
-   <!-- search -->
+    <button type="button" class="searchButtonWhite"></button>
+    <!-- search -->
 </header>
