--- a/src/views/_layouts/header-menu.ejs
+++ b/src/views/_layouts/header-menu.ejs
@@ -1,14 +1,14 @@
 <header id="header">
-  <!-- 뒤로가기 -->
-   <button type="button" class="menuButton">
-
-   </button>
-     <!-- 로고 -->
+    <!-- 뒤로가기 -->
+    <button
+        type="button"
+        class="menuButton"
+        onclick="location.href='/category'"
+    ></button>
+    <!-- 로고 -->
     <a href="#">
-      <img src="/static/images/nanum-logo.png" alt="나눔숲" />
+        <img src="/static/images/nanum-logo.png" alt="나눔숲" />
     </a>
-    <button type="button" class="searchButton">
-
-    </button>
-   <!-- search -->
+    <button type="button" class="searchButton"></button>
+    <!-- search -->
 </header>
