[최병호] views 제거

--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -126,7 +126,7 @@
                 });
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/views/login";
+                    window.location.href = "/login";
                 });
             });
         </script>
