--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -7,11 +7,7 @@
   </head>
   <body>
     <div class="wrap">
-      <img
-        src="/static/images/nanum-logo.png"
-        alt="logoimage"
-        class="logoimage"
-      />
+      <img src="/static/images/nanum-logo.png" alt="logoimage" class="logoimage" />
       <div class="container">
         <form method="post">
           <div class="form-group">
@@ -20,12 +16,7 @@
           </div>
           <div class="form-group b">
             <label for="password">비밀번호</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" name="password" />
           </div>
           <button type="submit" class="btn btn-primary">로그인</button>
         </form>
@@ -34,7 +25,7 @@
           <p>ㅣ</p>
           <a href="#" class="find id"><span>아이디 찾기</span></a>
           <p>ㅣ</p>
-          <a href="/views/signup" class="signup"><span>회원가입</span></a>
+          <a href="/signup" class="signup"><span>회원가입</span></a>
         </div>
       </div>
     </div>
